tree & calc fixes

--- a/calc/Makefile
+++ b/calc/Makefile
@@ -1,5 +1,6 @@
 CC=gcc
 CFLAGS=-c -Wall
+MATHLIB=-lm
 DEBUG=-g
 SOURCES=stack.c hash.c reverse-polish.c shunting-yard.c calc.c error.c
 OBJECTS=$(SOURCES: .c=.o)
@@ -8,7 +9,7 @@ EXEC=calc
 all:	$(SOURCES) $(EXEC)
 
 $(EXEC): $(OBJECTS)
-	$(CC) $(OBJECTS) -o $@ $(DEBUG)
+	$(CC) $(OBJECTS) $(MATHLIB) -o $@ $(DEBUG)
 
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
